     ok deraadt@ djm@ dtucker@
   - jmc@cvs.openbsd.org 2007/06/08 07:43:46
     [ssh_config.5]
     put the MAC list into a display, like we do for ciphers,
     since groff has trouble handling wide lines;
   - jmc@cvs.openbsd.org 2007/06/08 07:48:09
     [sshd_config.5]
     oops, here too: put the MAC list into a display, like we do for
     ciphers, since groff has trouble with wide lines;

20070605
 - (dtucker) OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2007/05/22 10:18:52
     [sshd.c]
     zap double include; from p_nowaczyk AT o2.pl
     (not required in -portable, Id sync only)
   - djm@cvs.openbsd.org 2007/05/30 05:58:13
     [kex.c]
     tidy: KNF, ARGSUSED and u_int
   - jmc@cvs.openbsd.org 2007/05/31 19:20:16
     [scp.1 ssh_config.5 sftp-server.8 ssh-agent.1 sshd_config.5 sftp.1
     ssh-keygen.1 ssh-keyscan.1 ssh-add.1 sshd.8 ssh.1 ssh-keysign.8]
     convert to new .Dd format;
     (We will need to teach mdoc2man.awk to understand this too.)
   - djm@cvs.openbsd.org 2007/05/31 23:34:29
     [packet.c]
     gc unreachable code; spotted by Tavis Ormandy
   - djm@cvs.openbsd.org 2007/06/02 09:04:58
     [bufbn.c]
     memory leak on error path; from arnaud.lacombe.1 AT ulaval.ca
   - djm@cvs.openbsd.org 2007/06/05 06:52:37
     [kex.c monitor_wrap.c packet.c mac.h kex.h mac.c]
     Preserve MAC ctx between packets, saving 2xhash calls per-packet.
     Yields around a 12-16% end-to-end speedup for arcfour256/hmac-md5
     patch from markus@ tested dtucker@ and myself, ok markus@ and me (I'm
     committing at his request)
 - (dtucker) [mdoc2man.awk] Teach it to deal with $Mdocdate tags that
   OpenBSD's cvs now adds.
 - (dtucker) [mdoc2man.awk] Remove trailing "$" from Mdocdate regex so
   mindrot's cvs doesn't expand it on us.
 - (dtucker) [mdoc2man.awk] Add support for %R references, used for RFCs.

20070520
 - (dtucker) OpenBSD CVS Sync
   - stevesk@cvs.openbsd.org 2007/04/14 22:01:58
     [auth2.c]