@@ -24,6 +24,8 @@
      [sshd_config.5]
      oops, here too: put the MAC list into a display, like we do for
      ciphers, since groff has trouble with wide lines;
+ - (djm) [configure.ac umac.c] If platform doesn't provide swap32(3), then
+   fallback to provided bit-swizzing functions
 
 20070605
  - (dtucker) OpenBSD CVS Sync
@@ -2999,4 +3001,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4684 2007/06/11 04:07:12 djm Exp $
+$Id: ChangeLog,v 1.4685 2007/06/11 04:15:42 djm Exp $
